--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,13 @@ body{
  padding-bottom: 15px;
 }
 
+#header img{
+   float: left;
+   width: 70px;
+   height: 40px;
+   padding-left: 10px;
+}
+
 #container{
    padding-top: 20px;
    float: left;
