--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,38 @@ body{
 
 }
 
+#barra {
+   margin:auto;
+   font-family:Arial, Helvetica, sans-serif;
+   padding: 30px 0px 0px 0px;
+   border-radius: 10px;
+   float: right;
+}
+
+ul, ol {
+   list-style:none;
+}
+
+.nav > li {
+   float:left;
+}
+
+.nav li a {
+   background-color:rgb(158, 163, 185);
+   color: rgb(51, 59, 92);;
+   font-size: 14px;
+   text-decoration:none;
+   padding:10px 12px;
+   display:block;
+   box-shadow: 0px 2px 20px rgb(0, 0, 0, 0.5);
+}
+
+.nav li a:hover {
+   background-color: rgb(120, 124, 143);
+   border-color: rgb(132, 134, 155) 1px solid;
+   border-radius: 10%;
+}
+
 .clear {
    clear: both;
 } 
