--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body{
  padding-top: 25px;
  text-align: center;
  color: rgb(22, 26, 44);
+ display: flex; align-items: center;
  font-weight: bolder;
  font-size: 25px;
  border-radius: 5px;
